# conf-manager

./: LICENSE  README.md  flake.nix  pyproject.toml
conf_manager/: config.ini  main.py
conf_manager/config/: converter.py  manager.py  parser.py
conf_manager/file/: file_manager.py
conf_manager/override/: processor.py
conf_manager/utils/: logging_config.py
tests/: test_cli.py  test_conf_manager.py
tests/config/: test_converter.py  test_manager.py  test_parser.py
tests/file/: test_file_manager.py
tests/override/: test_processor.py
