[tool.poetry]
name = "conf-manager"
version = "0.1.0"
description = "A collection of scripts to manage overriding individual ini settings on a system"
authors = ["Johnny Castrup <johnny@castrup.net>"]
readme = "README.md"

packages = [{include = "conf_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
click = "^8.1.7"
configparser = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conf-manager = "conf_manager.main:main"